# mx-exchange-dataclient

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: PRD_CERPI_MONITORING.md
examples/: analyze_xbrl_concepts.py  deduplicate_files.py  download_all_cerpi_docs.py  download_all_cerpi_xbrls.py  download_cerpi_latest_xbrl.py  download_qtzalpi_xbrls.py  extract_balance_sheet.py  extract_balance_sheet_qtzalpi.py  extract_cerpi_sizes.py  extract_fund_flows.py  extract_nav_reconciliation.py
src/mx_exchange_dataclient/: __init__.py  bmv_cli.py  bmv_client.py  bmv_models.py  cli.py  client.py  models.py
src/mx_exchange_dataclient/cli/: __init__.py  biva.py  bmv.py  main.py
src/mx_exchange_dataclient/clients/: __init__.py  base.py  biva.py  bmv.py
src/mx_exchange_dataclient/data/: __init__.py  known_issuers.json  xbrl_mappings.json  xbrl_taxonomy_concepts.csv  xbrl_taxonomy_concepts.txt
src/mx_exchange_dataclient/models/: __init__.py  biva.py  bmv.py  xbrl.py
src/mx_exchange_dataclient/sync/: __init__.py  download.py  engine.py  state.py  storage.py
src/mx_exchange_dataclient/utils/: __init__.py  event_classifier.py  file_organizer.py
src/mx_exchange_dataclient/xbrl/: __init__.py  concepts.py  metrics.py  parser.py  reconciliation.py
tests/: __init__.py  conftest.py  test_bmv_client.py  test_bmv_models.py  test_client.py  test_models.py
